--- a/final/styles/index.css
+++ b/final/styles/index.css
@@ -42,12 +42,14 @@ header {
     font-weight: 700;
 }
 
-nav a {
+nav {
     font-size: 20px;
+    font-weight: 800;
+}
+nav a {
     margin-left: 1.5rem;
     color: var(--md-on-surface);
     text-decoration: none;
-    font-weight: 500;
 }
 
 nav a:hover {
@@ -56,6 +58,7 @@ nav a:hover {
 
 nav button {
     font-size: 20px;
+    font-weight: 700;
     margin-left: 1.5rem;
     padding: 0.5rem 1rem;
     border: none;
@@ -115,8 +118,8 @@ p {
     background-color: var(--md-surface-container);
     padding: 2rem;
     border-radius: 16px;
-    margin-bottom: 0; /* Remove original margin */
-    flex: 1; /* Allows both sections to grow and fill the space */
+    margin-bottom: 0; 
+    flex: 1; 
 }
 
 .book-details {
@@ -174,7 +177,7 @@ footer {
 
 .reading-container {
     display: flex;
-    gap: 2rem; /* Creates space between the two sections */
-    align-items: start; /* Aligns items to the top */
+    gap: 2rem; 
+    align-items: start; 
     margin-bottom: 4rem;
 }
